fix minicart being overlapped

--- a/src/app/design/frontend/Avanti/innovation/Magento_Checkout/web/css/source/common/_minicart.less
+++ b/src/app/design/frontend/Avanti/innovation/Magento_Checkout/web/css/source/common/_minicart.less
@@ -1,3 +1,9 @@
+.minicart-wrapper {
+    position: relative;
+    z-index: 99;
+}
+
+
 & when (@media-common = true) {
     .minicart-wrapper {
         .block-minicart {
@@ -29,6 +35,14 @@
                     }
                 }
             }
+        }
+    }
+    .minicart-items {
+        .product-item-details {
+            padding-left: 0;
+            flex-direction: row;
+            gap: 0;
+            flex-grow: 0;
         }
     }
 }
